--- a/LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-from-javascript-url-sub-frame-2-level.html
+++ b/LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-from-javascript-url-sub-frame-2-level.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <p>This tests that a javascript: URL loaded in an iframe inside another javascipt: URL loaded iframe has access to the main frame.</p>
+    <p>This tests that a javascript: URL loaded in an iframe inside another javascript: URL loaded iframe has access to the main frame.</p>
     <iframe id="aFrame" style="width: 500px; height: 300px;"></iframe>
     <p id='accessMe'>FAIL: Cross frame access from a javascript: URL inside another javascript: URL was denied.</p>
     <script>
