--- a/LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-to-javascript-url-from-javscript-url.html
+++ b/LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-to-javascript-url-from-javscript-url.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <p>This tests that a javascript: URL loaded in an iframe inside another javascipt: URL loaded iframe has access to it's parent, the 
+    <p>This tests that a javascript: URL loaded in an iframe inside another javascript: URL loaded iframe has access to it's parent, the 
         first javascript: URL loaded iframe.</p>
     <iframe id="aFrame" style="width: 500px; height: 300px;"></iframe>
     <script>
