--- a/LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-to-javascript-url-sub-frame.html
+++ b/LayoutTests/http/tests/security/javascriptURL/xss-ALLOWED-to-javascript-url-sub-frame.html
@@ -3,7 +3,7 @@
     <script src="../resources/cross-frame-access.js"></script>
 </head>
 <body>
-    <p>This tests that the main frame can access the contents of an iframe that contains a javascipt: URL loaded page</p>
+    <p>This tests that the main frame can access the contents of an iframe that contains a javascript: URL loaded page</p>
     <iframe id="aFrame"></iframe>
     <pre id="console"></pre>
     <script>
